# hylic-docs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  pages.yml
Makefile-scripting/: build-book.sh  test-ci.sh  test.sh
book/: .IA.md  .anchor-audit.md  book.toml
book/src/: SUMMARY.md  glossary.md  intro.md  quickstart.md
book/src/bench-results/: bench-report.html  bench-speedup.txt  bench-style.css  bench-table.txt  bench.csv  executor-compare.csv  executor-compare.html  executor-compare.txt  hylic-modes-speedup.txt  hylic-modes.csv  hylic-modes.html  hylic-modes.txt  hylo-compare.csv  hylo-compare.html  hylo-compare.txt  matrix-analysis.html  matrix-analysis.json  matrix.csv  matrix.html  matrix.txt  modsim.csv  modsim.html  modsim.txt  module-sim-speedup.txt  module-sim-table.txt  module-sim.csv  module-sim.html  module-sim.txt  overhead-speedup.txt  overhead.csv  overhead.html  overhead.txt  parallel.csv  parallel.html  parallel.txt  quick.csv  quick.html  quick.txt  sequential.csv  sequential.html  (+1 more)
book/src/concepts/: domains.md  entry.md  lifts.md  separation.md  transforms.md
book/src/cookbook/: benchmarks.md  config_inheritance.md  cycle_detection.md  explainer.md  expression_eval.md  fibonacci.md  filesystem_summary.md  graph_transformations.md  module_resolution.md  (+3 more)
src/: docs_examples.rs  lib.rs  support.rs
src/cookbook/: config_inheritance.rs  cycle_detection.rs  expression_eval.rs  fibonacci.rs  filesystem_summary.rs  graph_transformations.rs  mod.rs  module_resolution.rs  parallel_execution.rs  transformations.rs
(+71 files in other folders)
