[package]
name = "hylic-docs"
version = "0.8.0"
edition = "2024"
description = "mdBook source + doc-tested code samples for the hylic documentation site."
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
hylic = "0.8"
hylic-pipeline = "0.8"
either = "1.15.0"
insta = { version = "1.42", features = ["glob"] }
